--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>音樂課考試練習網站</title>
+    <title>cool website</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
   </head>
+
   <body>
-    gsdposdngposdngopdsngpdsogndsgnz
+    <h1>音樂考試練習器</h1>
+    <div id="content">
+        gaspgsa
+        <br>
+        <button id="start">start quiz</button>
+    </div>
   </body>
+  <div id="bg"></div>
+  <script src="script.js"></script>
 </html>
