--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>cool website</title>
+    <title>音樂考試練習器 ヽ(・ω・)ﾉ</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   </head>
 
   <body>
     <h1>音樂考試練習器</h1>
     <div id="content">
-        gaspgsa
+        <h2>為了對付那完全沒有意義的考試而做的練習器</h2>
         <br>
-        <button id="start">start quiz</button>
+        <button onclick="location.href='quiz.html'">check it out <i class="fa-solid fa-arrow-right"></i></button>
+        <br>
+        <br>
+        <button onclick="location.href='cat.html'">cat <i class="fa-solid fa-cat"></i></button>
+    </div>
+    <div id="footer">
+      <a href="https://github.com/700zxcvbnm/music-exam-practice-tool">by 700zxcvbnm</a>
     </div>
   </body>
   <div id="bg"></div>
-  <script src="script.js"></script>
 </html>
