add hyperlink on title to return to index

--- a/cat.html
+++ b/cat.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>音樂考試練習器</h1>
+    <h1><a href="https://700zxcvbnm.github.io/music-exam-practice-tool/">音樂考試練習器</a></h1>
     <div id="content">
         <blockquote class="twitter-tweet tw-align-center" data-theme="dark"><p lang="en" dir="ltr">selfie time <a href="https://t.co/4u8gEj8ECC">pic.twitter.com/4u8gEj8ECC</a></p>&mdash; kiji1674 - UNOFFICIAL (@kiji1674_UNOF) <a href="https://twitter.com/kiji1674_UNOF/status/1795739500955746580?ref_src=twsrc%5Etfw">May 29, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script><br><button onclick="location.href='index.html'"><i class="fa-solid fa-arrow-left"></i> go back</button>
