--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>音樂考試練習器</h1>
+    <h1><a href="https://700zxcvbnm.github.io/music-exam-practice-tool/">音樂考試練習器</a></h1>
     <div id="content">
         <h2>為了對付那完全沒有意義的考試而做的練習器</h2>
         <br>
