--- a/quiz.html
+++ b/quiz.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>音樂考試練習器</h1>
+    <h1><a href="https://700zxcvbnm.github.io/music-exam-practice-tool/">音樂考試練習器</a></h1>
     <div id="content">
         <br>
         <button id="start">start quiz <i class="fa-solid fa-question"></i></button>
