minor background changes

--- a/quiz.html
+++ b/quiz.html
@@ -33,6 +33,7 @@
     </div>
   </body>
   <div id="bg"></div>
+  <div id="bg2"></div>
 
   <script src="songs.js"></script> <!--psst don't look-->
   <script src="script.js"></script>
