--- a/quiz.html
+++ b/quiz.html
@@ -23,6 +23,9 @@
         e.g. <p style="color: navy" class="mono">No.94 驚愕交響曲 -> no94驚愕交響曲</p>
         <br>
         <br>
+        如果中途離開 會幫你儲存進度
+        <br>
+        <br>
         請不要查看代碼找答案，雖然說我也阻止不了你 哈哈
         <br>
         <br>
