add background toggle to other pages

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
         <br>
         <button onclick="location.href='cat.html'">cat <i class="fa-solid fa-cat"></i></button>
     </div>
+
+    <button id="bgtoggle">toggle background</button>
+
     <div id="footer">
       <a href="https://github.com/700zxcvbnm/music-exam-practice-tool">by 700zxcvbnm</a>
     </div>
+
+    <div id="bg"></div>
+    <div id="bg2"></div>
+    
+    <script src="bgtoggle.js"></script>
   </body>
-  <div id="bg"></div>
-  <div id="bg2"></div>
 </html>
