--- a/quiz.html
+++ b/quiz.html
@@ -31,13 +31,19 @@
         <br>
         good luck not have fun
     </div>
+    <br>
+
+    <button id="bgtoggle">toggle background</button>
+
     <div id="footer">
       <a href="https://github.com/700zxcvbnm/music-exam-practice-tool">by 700zxcvbnm</a>
     </div>
-  </body>
-  <div id="bg"></div>
-  <div id="bg2"></div>
 
-  <script src="songs.js"></script> <!--psst don't look-->
-  <script src="script.js"></script>
+    <div id="bg"></div>
+    <div id="bg2"></div>
+
+    <script src="bgtoggle.js"></script>
+    <script src="songs.js"></script> <!--psst don't look-->
+    <script src="script.js"></script>
+  </body>
 </html>
