--- a/cat.html
+++ b/cat.html
@@ -12,10 +12,16 @@
         <blockquote class="twitter-tweet tw-align-center" data-theme="dark"><p lang="en" dir="ltr">selfie time <a href="https://t.co/4u8gEj8ECC">pic.twitter.com/4u8gEj8ECC</a></p>&mdash; kiji1674 - UNOFFICIAL (@kiji1674_UNOF) <a href="https://twitter.com/kiji1674_UNOF/status/1795739500955746580?ref_src=twsrc%5Etfw">May 29, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script><br><button onclick="location.href='index.html'"><i class="fa-solid fa-arrow-left"></i> go back</button>
     </div>
+
+    <button id="bgtoggle">toggle background</button>
+
     <div id="footer">
       <a href="https://github.com/700zxcvbnm/music-exam-practice-tool">by 700zxcvbnm</a>
     </div>
+
+    <div id="bg"></div>
+    <div id="bg2"></div>
+
+    <script src="bgtoggle.js"></script>
   </body>
-  <div id="bg"></div>
-  <div id="bg2"></div>
 </html>
